[project]
name = "amexpdf"
version = "0.5.1"
description = "Parses American Express PDF invoices and outputs transactions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "pypdf>=5.2.0",
]

[project.scripts]
amexpdf = "amexpdf.main:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[project.entry-points.console_scripts]
amexpdf = "amexpdf.main:main"
